# Hisi3559A_Yolov5

./: CMakeLists.txt  README.md
sample/: yolov5-nnie-sample.cpp
src/: yolo_post.cpp  yolo_post.h
